<resources>

    <string name="app_name">Nabsta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example</string>
    <string name="startRecord">Start Record</string>
    <string name="stopRecord">Stop Record</string>

    <string name="toast_battery_low">Battery is running low!</string>
    <string name="shut_down">Shut Down</string>
    <string name="keep_open">Keep Open</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_stop_playing">Stop Playing</string>
    <string name="txt_stop_recording">Stop recording</string>
    <string name="txt_start_playing">Start Playing</string>
    <string name="txt_start_recording">Start recording</string>
    <string name="track1_3gp">track1.3gp</string>
    <string name="track2_3gp">track2.3gp</string>
    <string name="track3_3gp">track3.3gp</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>

    <string name="project">Nabsta Studio</string>
    <string name="new_project">New Project</string>
    <string name="manage_projects">Manage Projects</string>
    <string name="delete_project">Delete Project</string>
    <string name="delete_project_confirmation">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_track">Add Track</string>
    <string name="delete_track">Delete Track</string>
    <string name="delete_tracks">Delete Tracks</string>
    <string name="create_project">Create Project</string>

    <string name="project_name">Name</string>
    <string name="artist_name">Artist</string>

    <string name="songs">Songs</string>
    <string name="save_changes">Save Changes</string>

    <string name="open_project">Open Project</string>
    <string name="settings_keep_screen_on">Keep Screen On</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="maybe">maybe?</string>
    <string name="mix_tracks_to_master">Mix Tracks to Master</string>
    <string name="mix_track">Mix</string>
    <string name="save_as_master_track">Save as Master Track</string>
    <string name="master_track_name">Master Track Name</string>


</resources>
