<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <com.spazomatic.nabsta.controls.PlayButton
            android:id="@+id/play1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_playing"
            custom:playBackFileName="@string/track1_3gp"/>
       <com.spazomatic.nabsta.controls.RecordButton
           android:id="@+id/record1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/txt_start_recording"
           custom:recordFileName="@string/track1_3gp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.spazomatic.nabsta.controls.PlayButton
            android:id="@+id/play2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_playing"
            custom:playBackFileName="@string/track2_3gp"/>
        <com.spazomatic.nabsta.controls.RecordButton
            android:id="@+id/record2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_recording"
            custom:recordFileName="@string/track2_3gp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.spazomatic.nabsta.controls.PlayButton
            android:id="@+id/play3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_playing"
            custom:playBackFileName="@string/track3_3gp"/>
        <com.spazomatic.nabsta.controls.RecordButton
            android:id="@+id/record3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_recording"
            custom:recordFileName="@string/track3_3gp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.spazomatic.nabsta.controls.MasterPlayButton
            android:id="@+id/masterPlayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/master_play_btn" />
    </LinearLayout>
</LinearLayout>